2002-12-02  Masatake YAMATO  <jet@gyve.org>

	* distro, tools-version.sh: New files.
	distro comes from distro-0.8.1(http://distro.pipfield.ca/).
	distro and tools-version.sh should be included only in CVS version
	of sodipodi.
	
	* autogen.sh: Call tools-version.sh.
	
2002-12-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/desktop-properties.c: Partial color picker implementation

2002-12-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/text-edit.c: GtkObject/GObject cleanup

	* src/file.c: Ditto

	* TODO: Update with 0.29 tasks

	* src/sp-gradient.c: GtkObject/GObject cleanup

	* src/widgets/sp-widget.c: Ditto

	* src/widgets/gradient-selector.c: Ditto

	* src/widgets/gradient-vector.c: Ditto

	* src/widgets/gradient-position.c: Ditto

	* src/widgets/gradient-image.c: Ditto

	* src/dialogs/fill-style.c: Ditto

2002-11-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/view.h: Derive directly from GObject

2002-11-30  Masatake YAMATO  <jet@gyve.org>

	* configure.in (ENABLE_AUTOTRACE): Comment out autotrace/frontline
	checking till frontline becomes gtk+2 based.

2002-11-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/selection.h: Inherit directly from GObject

	* src/event-context.h: Inherit directly from GObject

	* src/helper/sp-canvas.c (sp_canvas_item_dispose): Set xform to NULL

	* src/display/canvas-arena.c (sp_canvas_arena_destroy): Fixed typo, so
	multiple destroys are allowed

	* src/nodepath.c: Removed external cursor pointers

	* src/knot.c (sp_knot_set_property): Ref new cursors

	* src/document.c (sp_document_get_type): Inherit directly from GObject

2002-11-29  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/knot.c (sp_knot_handler): Signature change, return correct value as it should

	* src/helper/sp-canvas.c (scroll_to): Blit window, unless explicitly forbidden
	(sp_canvas_size_allocate): Update onlu changed areas

	* src/sp-item.c (sp_item_invoke_bbox): Signature change
