@@ -130,7 +130,7 @@ AM_CONDITIONAL(USE_MMX, test x$use_mmx_asm = xyes)
 
 AC_DEFINE(GTK_ENABLE_BROKEN,1,[Use broken and deprectaded Gtk stuff])
 
-AC_OUTPUT([ intl/Makefile m4/Makefile 
+AC_OUTPUT([ intl/Makefile  m4/Makefile 
 Makefile
 src/Makefile
 src/libnr/Makefile
