@@ -438,9 +438,11 @@ sp_svg_view_widget_view_resized (SPViewWidget *vw, SPView *view, gdouble width, 
 	svgvw = SP_SVG_VIEW_WIDGET (vw);
 
 	if (svgvw->canvas) {
-		g_print ("set scroll %g %g\n", width, height);
 #if 0
+		g_print ("set scroll %g %g\n", width, height);
 		sp_canvas_set_scroll_region (SP_CANVAS (svgvw->canvas), 0, 0, MAX (width, 1.0), MAX (height, 1.0));
+#else
+		gtk_widget_set_usize (svgvw->canvas, width, height);
 #endif
 	}
 
